<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:background="#00308F"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/louis" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewMyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/myname"
                android:textColor="#F0F8FF"
                android:gravity="center"
                android:fontFamily="serif"
                android:textSize="32dp" />

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#F0F8FF"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/textViewEmail"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#F0F8FF"
                android:layout_weight="1"
                android:text="@string/email"
                android:fontFamily="serif"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewAdresse"
                android:textColor="#F0F8FF"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:text="@string/address" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewTitleExp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:background="#F0F8FF"
        android:layout_marginBottom="5dp"
        android:text="@string/title_exp" />


    <ListView
        android:id="@+id/listViewExperiences"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_experience" />

    <TextView
        android:id="@+id/textViewTitleForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        android:gravity="center"
        android:fontFamily="serif"
        android:background="#F0F8FF"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:text="@string/title_form" />

    <ListView
        android:id="@+id/listViewFormation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_formation"/>


    <Button
        android:id="@+id/buttonSkills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#A51C30"
        android:fontFamily="serif"
        android:text="@string/title_comp" />
</LinearLayout>